# gcinside-inference

./: .env.example  Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements-ml.txt
app/: main.py  registry.py  schemas.py
app/models/: base.py  gbdt.py  mock.py
tests/: test_api.py
