[project]
name = "gcinside-ai-inference"
version = "0.1.0"
description = "Risk score inference service for GCinside"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "pydantic>=2.9",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "httpx>=0.27",
  "ruff>=0.7",
]
ml = [
  "scikit-learn>=1.5",
  "lightgbm>=4.5",
  "xgboost>=2.1",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["."]
